# slang

./: CMakeLists.txt
